# ide-agentic-engine

./: .coverage  .env.enc  .env.gpg  .env.template  .envrc  .gitignore  .pre-commit-config.yaml  .project_state.json  .sops.yaml  Claud_Output.txt  HANDOFF.md  PROJECT_SPEC.md  PROJECT_SPEC.template.md  README.md  bootstrap.py  cli.py  engine.py  init_project.sh  justfile  pyproject.toml  requirements.txt  secrets_setup.sh
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.gemini/antigravity/: settings.json
.github/workflows/: ci.yml
agents/: __init__.py  compliance_agent.py  report_agent.py  triage_agent.py
core/: __init__.py  ide_context.py  key_pool.py  orchestrator.py  session_store.py  state.py
deployment/: prometheus.yml
engine/: __init__.py  agent_orchestrator.py  cli.py  connection_pool.py  llm_manager.py  mcp_gateway.py  orchestrator.py  session_store.py  terminal_executor.py  token_optimizer.py  webhook_listener.py
engine/optimization/: prompt_cache.py
engine/providers/: groq_provider.py
gateway/: batch_executor.py  connection_pool.py  key_pool.py  mcp_gateway.py  tool_registry.py
ide_engine/: extract.py  pyproject.toml
ide_engine/agents/: remediation_agent.py
ide_engine/core/: cache.py  orchestrator.py  sentry_setup.py  state.py
ide_engine/deployment/: docker-compose.yml
ide_engine/engine/: webhook_listener.py
ide_engine/profiles/: api_keys.yaml  sync_keys.sh
ide_engine/scripts/: backup_everything.sh
optimization/: cost_tracker.py  prompt_cache.py  token_optimizer.py
providers/: anthropic_provider.py  base_provider.py  gemini_provider.py  openai_provider.py  router.py
reports/: asasedu_webapp_config.py
scripts/: setup_secrets.sh
servers/: cyber_tools_server.py  filesystem_server.py  terminal_server.py
shared_mcps/: pyproject.toml  test_mcps.py
shared_mcps/servers/: socroot_development.py  socroot_state_server.py
socroot/: __init__.py  evidence_store.py  n8n_adapter.py  nuclei_adapter.py  wazuh_adapter.py
tests/: test_agent.py  test_batch_executor.py  test_batch_tool.py  test_evidence_chain.py  test_key_pool.py  test_mcp_gateway.py  test_optimization.py  test_token_optimizer.py
tools/: __init__.py  code_skeleton_server.py  filesystem_server.py  git_server.py  terminal_server.py
(+17 files in other folders)
